--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical" android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ivMovieImage"
@@ -14,16 +14,16 @@
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:paddingLeft="10dp"
-        android:layout_toRightOf="@+id/ivMovieImage"
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/ivMovieImage"
+        android:paddingLeft="10dp"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:text="Captain"
-        android:layout_alignParentTop="true"/>
+        tools:text="Captain" />
 
     <TextView
         android:paddingLeft="10dp"
@@ -34,4 +34,5 @@
         android:layout_below="@+id/tvTitle"
         android:layout_toRightOf="@+id/ivMovieImage"
         android:layout_toEndOf="@+id/ivMovieImage" />
+
 </RelativeLayout>
