--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -6,9 +6,33 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.flickster.MovieDetailsActivity">
 
+
     <TextView
+        android:id="@+id/tv_title"
+        tools:text="title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_below="@+id/tv_title"
         android:id="@+id/tv_popularity"
         tools:text="popularity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    <TextView
+        android:layout_below="@+id/tv_popularity"
+        android:id="@+id/tv_vote_average"
+        tools:text="vote average"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    <TextView
+        android:layout_below="@+id/tv_vote_average"
+        android:id="@+id/tv_release_date"
+        tools:text="release date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
