--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -6,8 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.flickster.MovieDetailsActivity">
 
+    <fragment
+        android:id="@+id/youtubeFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.google.android.youtube.player.YouTubePlayerFragment">
+    </fragment>
 
     <TextView
+        android:layout_below="@id/youtubeFragment"
         android:id="@+id/tv_title"
         tools:text="title"
         android:layout_width="wrap_content"
