--- a/app/src/main/res/layout-land/activity_movie.xml
+++ b/app/src/main/res/layout-land/activity_movie.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ListView
+        android:background="@android:color/black"
         android:id="@+id/lvMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
